# vectreC

./: .gitattributes  .gitignore  Makefile.in  README-MACOS.md  README-WINDOWS.md  README.md  README_Windows.md  README_macOS.md  WINDOWS-HANDOFF.md  a.out  build-macos.sh  build-windows.sh  build.sh  configure  configure.ac  package-macos.sh  package-windows.sh
bench/: README.md  compare_cmoc.sh  measure.sh  measure_speed.sh  t_bcdscore.s  t_checksum.s  t_clamp.s  t_collide.s  t_fixmul.s  t_isort.s  t_memops.s  t_objmove.s  t_rng.s  t_statem.s  t_strupr.s
bench/drv/: t_bcdscore.c  t_checksum.c  t_clamp.c  t_collide.c  t_fixmul.c  (+6 more)
cmoc/: Makefile.in  NEWS  aclocal.m4  configure  configure.ac
cmoc/doc/: Makefile.am  Makefile.in  README-WINDOWS.md  cmoc-vectrex.markdown
doc/: Makefile.in  README-WINDOWS.md  WINDOWS-HANDOFF.md  cmoc-manual.markdown
examples/: controller.c  hello.c  pong.c  romdata.c
macros/: Makefile.in  ac_compile_warnings.m4
src/: ASMText.cpp  ASMText2.cpp  BinaryOpExpr.h  CastExpr.cpp  ClassDef.cpp  CodeStatus.cpp  CodeStatus.h  CommaExpr.cpp  CommaExpr.h  DWordConstantExpr.cpp  Declaration.cpp  DeclarationSequence.cpp  DeclarationSequence.h  DeclarationSpecifierList.cpp  DeclarationSpecifierList.h  Declarator.h  ExpressionTypeSetter.cpp  FormalParamList.h  FunctionCallExpr.h  Makefile.am  Makefile.in  Parameters.cpp  ScopeCreator.cpp  SwitchStmt.cpp  SwitchStmt.h  TreeSequence.cpp  TypeDesc.cpp  TypeDesc.h  TypeManager.cpp  UnaryOpExpr.cpp  WordConstantExpr.h  main.cpp  parser.yy  test-program-output.pl  util.cpp  util.h  writecocofile.cpp
(+123 files in other folders)
